handle logout and session expiraton in admin ui
